--- a/index.html
+++ b/index.html
@@ -2,53 +2,50 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Calculadora</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" type="image/x-icon" href="img/calculator-icon.png">
+  <link rel="shortcut icon" href="img/calculator-icon.png" type="image/x-icon">
+  <script src="script.js" defer></script>
+  <title>Calculadora</title>
 </head>
 
 <body>
+
   <div class="container">
-    <div class="visorHistorico">
-      <input type="text" id="input" placeholder="0" disabled>
-      <input type="text" id="output" placeholder="0" disabled="true">
+    <div id="visor"></div>
+    <div class="botoes">
+      <button>CE</button>
+      <button>C</button>
+      <button>DEL</button>
+      <button>&divide;</button>
 
-      <div class="botoes">
-        <button class="botaoCinza">7</button>
-        <button class="botaoCinza">8</button>
-        <button class="botaoCinza">9</button>
-        <button>*</button>
-        <button>+</button>
+      <button class="numero">7</button>
+      <button class="numero">8</button>
+      <button class="numero">9</button>
+      <button>&times;</button>
 
-        <button class="botaoCinza">4</button>
-        <button class="botaoCinza">5</button>
-        <button class="botaoCinza">6</button>
-        <button>/</button>
-        <button>-</button>
+      <button class="numero">4</button>
+      <button class="numero">5</button>
+      <button class="numero">6</button>
+      <button>-</button>
 
-        <button class="botaoCinza">1</button>
-        <button class="botaoCinza">2</button>
-        <button class="botaoCinza" class="botaoCinza">3</button>
-        <button>(</button>
-        <button>)</button>
+      <button class="numero">1</button>
+      <button class="numero">2</button>
+      <button class="numero">3</button>
+      <button>+</button>
 
-        <button class="botaoCinza">0</button>
-        <button class="botaoCinza">.</button>
-        <button class="botaoLaranja">=</button>
-        <button>CLEAR</button>
-        <button>DEL</button>
-      </div>
+      <button class="numero">0</button>
+      <button>.</button>
+      <button id="equal-btn">=</button>
     </div>
-
-    <div class="historico">
-      <h4>HISTÓRICO</h4>
-      <div class="containerHistorico"></div>
-    </div>
-
   </div>
-  <script src="script.js"></script>
+
+  <div id="container" class="inlineBlock">
+    <h3>Histórico</h3>
+    <div id="historico"></div>
+  </div>
+
 </body>
 
 </html>
